Squashing commits into one for Week 2 correction

--- a/Week02/lesson04/homework/relaxr_starter_code/css/style.css
+++ b/Week02/lesson04/homework/relaxr_starter_code/css/style.css
@@ -11,6 +11,7 @@ Developer @GA in NYC
 /*******************************************/
 
 /* Box Model Hack */
+
 * {
      -moz-box-sizing: border-box; /* Firexfox */
      -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
@@ -41,25 +42,121 @@ Developer @GA in NYC
   padding: 0 10px 10px 0; /* note the padding around a left floated image */
 }
 
+@font-face {
+    font-family: Open Sans;
+    src: url(https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans);
+    font-weight: light, light italic, semibold, extrabold;
+}
 /******************************************
 /* BASE STYLES
 /*******************************************/
 
 body {
-     color: #000;
-     font-size: 12px;
-     line-height: 1.4;
-     font-family: Helvetica, Arial, sans-serif;
+     color: #f0efef;
+     font-family: Open Sans, Helvetica, Arial, sans-serif;
      background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-      background-size: cover;
+     background-size: cover;
 }
 
+header {
+       font-size: 24px;
+       height: 500px;
+}
+
+h1 {
+   font-weight: extrabold;
+   margin: 75px 0 0 100px;
+}
+
+h2 {
+   font-weight: semibold;
+   text-align: center;
+   line-height: 250px;
+}
+
+nav{
+   background-color: #f9e42e;
+   width: 200px;
+   margin: 0 auto;
+   border-radius: 5px;
+}
+
+nav a {
+       font-weight: extrabold;
+       font-size: 14px;
+       color: #033048;
+       text-decoration: none;
+       line-height: 50px;
+       margin-left: 65px;
+}
+
+.benefits {
+          font-weight: light;
+          font-size: 13px;
+          color: #606161;
+          background-color: #f0efef;
+          height: 250px;
+}
+
+h3{
+  font-weight: semibold;
+  font-size: 20px;
+  color: #121212;
+  padding-top: 20px;
+  margin-left: 100px;
+}
+
+p{
+  padding-bottom: 20px;
+  margin-left: 100px
+}
+
+ol{
+   list-style-type: disc;
+   padding-bottom: 20px;
+   margin-left: 150px;
+   line-height: 2;
+}
+
+.quote {
+       height:130px;
+       background: url(../images/testimonial_bg.jpg);
+}
+
+blockquote {
+           font-style: italic;
+           font-weight: light italic;
+           font-size: 18px;
+           text-align: center;
+           padding: 20px 0 20px 0;
+}
+
+span {
+     font-style: normal;
+     font-weight: semibold;
+}
+
+.link {
+      height: 100px;
+      padding: 25px 0 25px 0;
+      background-color: #f9e42e;
+}
+
+.link nav {
+          background-color: #033048;
+}
+
+.link nav a {
+            margin-left: 55px;
+            color: #f9e42e;
+}
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 
 /* Center the container */
+
 #container {
   width: 100%;
   margin: auto;
@@ -67,18 +164,28 @@ body {
 
 }
 
-header {
-
-}
-
-footer {
-
-}
-
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+footer {
+       line-height: 5;
+       text-align: center;
+       background-color: #121212
+}
 
+footer h1{
+         font-size: 24px;
+         color: #f9e42e;
+         margin: 0 auto;
+}
 
+footer img {
+           padding: 0 10px 0 10px;
+}
 
+footer p {
+         font-weight: semibold;
+         font-size: 9px;
+         margin: 0 auto;
+}
